--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-type-animation": "^3.2.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
